@@ -1,183 +1,67 @@
 package org.metavm.entity;
 
-import javassist.util.proxy.ProxyObject;
+import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import org.metavm.event.EventQueue;
 import org.metavm.flow.Code;
 import org.metavm.flow.Flow;
 import org.metavm.flow.Node;
-import org.metavm.object.instance.DefaultObjectInstanceMap;
 import org.metavm.object.instance.IndexKeyRT;
-import org.metavm.object.instance.ObjectInstanceMap;
 import org.metavm.object.instance.core.Reference;
 import org.metavm.object.instance.core.*;
 import org.metavm.object.type.*;
 import org.metavm.util.*;
 import org.metavm.util.profile.Profiler;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
+import java.io.InputStream;
 import java.lang.ref.WeakReference;
 import java.util.*;
-import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 
 import static java.util.Objects.requireNonNull;
-import static org.metavm.entity.EntityUtils.getRuntimeType;
-import static org.metavm.entity.EntityUtils.isModelInitialized;
 
+@Slf4j
 public abstract class BaseEntityContext implements CompositeTypeFactory, IEntityContext, ContextListener {
 
-    @SuppressWarnings("unused")
-    private static final Logger logger = LoggerFactory.getLogger(BaseEntityContext.class);
-    public static final Logger debugLogger = LoggerFactory.getLogger("Debug");
-
-    private final Map<Id, Object> entityMap = new HashMap<>();
-
-    private IInstanceContext instanceContext;
-    private final IdentitySet<Object> entities = new IdentitySet<>();
-    private final IdentityHashMap<Object, Instance> model2instance = new IdentityHashMap<>();
-    //    private final IdentitySet<Object> removedEntities = new IdentitySet<>();
-//    private final Map<Long, Object> removedEntityMap = new HashMap<>();
-    @Nullable
-    private final IEntityContext parent;
-    private final ObjectInstanceMap objectInstanceMap = new DefaultObjectInstanceMap(this, this::addBinding);
-    private final Set<ContextFlag> flags = new HashSet<>();
-    private boolean entityCreationDisabled;
+    private final IInstanceContext instanceContext;
     private ParameterizedMap parameterizedMap;
     private final transient WeakReference<IEntityContext> enclosingEntityContext;
 
-    public BaseEntityContext(IInstanceContext instanceContext, @Nullable IEntityContext parent) {
+    public BaseEntityContext(IInstanceContext instanceContext) {
         this.instanceContext = instanceContext;
-        this.parent = parent;
         instanceContext.addListener(this);
         enclosingEntityContext = new WeakReference<>(ContextUtil.getEntityContext());
         ContextUtil.setEntityContext(this);
     }
 
-    protected abstract TypeFactory getTypeFactory();
-
-    @Override
-    public <T> T getEntity(Class<T> klass, Instance instance) {
-        return getEntity(klass, instance, null);
-    }
-
-    public @Nullable IEntityContext getParent() {
-        return parent;
-    }
-
-    @Override
-    public <T> T getEntity(Class<T> entityClass, Instance instance, @Nullable Mapper<T, ?> mapper) {
-        var entity = instance.getMappedEntity();
-        if(entity != null)
-            return entityClass.cast(entity);
-        if(mapper == null)
-            mapper = getDefContext().getMapper(instance.getType()).as(entityClass);
-        return createEntity(instance, mapper);
-    }
-
-    @Override
-    public EventQueue getEventQueue() {
-        return instanceContext.getEventQueue();
-    }
-
     @Override
     public <T> List<T> getAllBufferedEntities(Class<T> entityClass) {
-        return NncUtils.filterByType(model2instance.keySet(), entityClass);
-    }
-
-    @Override
-    public Profiler getProfiler() {
-        return instanceContext.getProfiler();
-    }
-
-    @Override
-    public void invalidateCache(Id id) {
-        var entity = get(Object.class, id);
-        var instance = getInstance(entity);
-        instanceContext.invalidateCache(instance.getReference());
-    }
-
-    @Override
-    public void onInstanceIdInit(Instance instance) {
-        Object model = instance.getMappedEntity();
-        if (model != null && model2instance.containsKey(model)) {
-            putEntity(instance.getId(), model);
-            if (model instanceof IdInitializing idInitializing) {
-                NncUtils.requireNull(idInitializing.tryGetPhysicalId(), () -> "ID is already set for entity "
-                        + idInitializing.getClass().getName() + "-" + idInitializing);
-                idInitializing.initId(instance.tryGetId());
-            }
-        }
+        return Utils.filterByType(instanceContext, entityClass);
     }
 
     public void onInstanceInitialized(Instance instance) {
-        if(!TypeTags.isNonArraySystemTypeTag(instance.getType().getTypeTag()) || entityCreationDisabled)
-            return;
-        var loadAware = new ArrayList<LoadAware>();
-        instance.accept(new StructuralInstanceVisitor() {
+        if(instance instanceof Entity) {
+            var loadAware = new ArrayList<LoadAware>();
+            instance.accept(new StructuralInstanceVisitor() {
 
-            @Override
-            public void visitInstance(Instance instance) {
-                super.visitInstance(instance);
-                var entity = onInstanceInitialized0(instance);
-                if(entity instanceof LoadAware l)
-                    loadAware.add(l);
-            }
-        });
-        loadAware.forEach(LoadAware::onLoadPrepare);
-        loadAware.forEach(LoadAware::onLoad);
-    }
-
-    @SuppressWarnings({"rawtypes", "unchecked"})
-    private @Nullable Object onInstanceInitialized0(Instance instance) {
-        if(instance.getMappedEntity() != null)
-            return instance.getMappedEntity();
-        var typeTag = instance.getType().getTypeTag();
-        if (typeTag == 0 || typeTag >= 1000000)
-            return null;
-        var mapper = (Mapper) getDefContext().tryGetMapper(typeTag);
-        if (mapper == null || mapper.isDisabled())
-            return null;
-        return createEntity(instance, mapper);
-//        if (!mapper.isProxySupported()) {
-//            mapper.createEntity(instance, getObjectInstanceMap());
-//        } else {
-//            var entity = EntityProxyFactory.getProxy(
-//                    mapper.getEntityClass(),
-//                    instance.getId(),
-//                    k -> mapper.getEntityClass().cast(mapper.createModelProxyHelper(k)),
-//                    m -> instanceContext.get(instance.getId())
-//            );
-//            mapper.initEntityHelper(entity, instance, getObjectInstanceMap());
-//        }
-//        Object model = instance.getMappedEntity();
-//        if (model != null && model2instance.containsKey(model)) {
-//            var mapper = getDefContext().getMapperByEntity(model);
-//            initializeModel0(model, instance, mapper);
-//        }
-    }
-
-    @Override
-    public void onInstanceRemoved(Instance instance) {
-        Object model = instance.getMappedEntity();
-        if (model != null && model2instance.containsKey(model)) {
-            if (model instanceof Entity entity)
-                entity.setRemoved();
-//            model2instance.remove(model);
-//            removedEntities.add(model);
-//            if (instance.getId() != null)
-//                removedEntityMap.put(instance.getIdRequired(), model);
-//            if (instance.getId() != null) {
-//                entityMap.remove(instance.getIdRequired());
-//            }
+                @Override
+                public Void visitInstance(Instance instance) {
+                    super.visitInstance(instance);
+                    var entity = onInstanceInitialized0(instance);
+                    if (entity instanceof LoadAware l)
+                        loadAware.add(l);
+                    return null;
+                }
+            });
+            loadAware.forEach(LoadAware::onLoadPrepare);
+            loadAware.forEach(LoadAware::onLoad);
         }
     }
 
-    @Override
-    public boolean isRemoved(Object entity) {
-        var instance = getInstance(entity);
-        return instance.isRemoved();
+    private @Nullable Object onInstanceInitialized0(Instance instance) {
+        return instance;
     }
 
     @Override
@@ -186,102 +70,27 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     @Override
-    public boolean isNewEntity(Object entity) {
-        var instance = model2instance.get(entity);
-        if (instance != null)
-            return instance.isNew();
-        else
-            return parent == null || parent.isNewEntity(entity);
-    }
-
-    public boolean isPersisted(Object entity) {
-        return !isNewEntity(entity);
-    }
-
-    protected <T> void beforeGetModel(Class<T> klass, Instance instance) {
-    }
-
-    @Override
-    public boolean containsEntity(Object entity) {
-        return entities.contains(entity) || parent != null && parent.containsEntity(entity);
-    }
-
-    public boolean containsKey(EntityKey entityKey) {
-        return entityMap.containsKey(entityKey.id());
-    }
-
-    @Override
-    public <T> T createEntity(Instance instance, Mapper<T, ?> mapper) {
-        NncUtils.requireNull(instance.getMappedEntity(), "Entity was already created");
-        var entity = instance.tryGetId() != null ? entityMap.get(instance.getId()) : null;
-        if(entity == null && mapper.isProxySupported()) {
-            entity = mapper.createModelProxyHelper(mapper.getEntityClass());
-            if(entity instanceof IdInitializing idInitializing && instance.tryGetId() != null)
-                idInitializing.initId(instance.getId());
-    }
-        if (entity != null) {
-            addMapping(entity, instance);
-            mapper.initEntityHelper(entity, instance, getObjectInstanceMap());
-            if(entity instanceof ProxyObject)
-                EntityUtils.setProxyState(entity, EntityMethodHandler.State.INITIALIZED);
-        } else {
-            entity = mapper.getEntityClass().cast(mapper.createEntityHelper(instance, getObjectInstanceMap()));
-            addMapping(entity, instance);
-        }
-//        if (entity instanceof LoadAware loadAware)
-//            loadAware.onLoad();
-        return mapper.getEntityClass().cast(entity);
-    }
-
-    @Override
-    public void onPatchBuild() {
-        updateInstances();
-    }
-
-    @Override
     public boolean onChange(Instance instance) {
-        if (instance instanceof ClassInstance classInstance && classInstance.getType().getTypeTag() > 0 && !instance.isDirectlyModified()) {
-            //noinspection unchecked
-            var mapper = (Mapper<Object, ?>) getDefContext().tryGetMapper(classInstance.getType().getTypeTag());
-            if (mapper != null && !mapper.isDisabled()) {
-                var entity = getEntity(Object.class, classInstance, mapper);
-                if (entity instanceof ChangeAware changeAware && changeAware.isChangeAware()) {
-                    changeAware.onChange(classInstance, this);
-                    return true;
-                }
-            }
+        if (instance instanceof ChangeAware changeAware && changeAware.isChangeAware()) {
+            changeAware.onChange(this);
+            return true;
         }
         return false;
     }
 
     @Override
     public List<Instance> beforeRemove(Instance instance, Predicate<Instance> contains) {
-        var object = instance.getMappedEntity();
         List<Instance> cascade;
-        if (object instanceof RemovalAware removalAware)
-            cascade =  NncUtils.map(removalAware.beforeRemove(this), this::getInstance);
+        if (instance instanceof RemovalAware removalAware)
+            cascade =  removalAware.beforeRemove(this);
         else
             cascade = List.of();
-        if (object instanceof Entity entity && entity.getParentEntity() != null) {
-            var parentInst = getInstance(entity.getParentEntity());
-            if (!contains.test(parentInst)) {
-                if (entity.getParentEntity() instanceof ChildArray<?> array)
-                    array.remove(entity);
-                else {
-                    var parentField = entity.getParentEntityField();
-                    // Parent field can be null even if the parent is an non-array object during pre-upgrade
-                    if(parentField != null && ReflectionUtils.get(entity.getParentEntity(), parentField) == entity)
-                        ReflectionUtils.set(entity.getParentEntity(), parentField, null);
-                }
-            }
-        }
         return cascade;
     }
 
     @Override
     public boolean onRemove(Instance instance) {
-        var entity = instance.getMappedEntity();
-        if (entity instanceof PostRemovalAware removalAware) {
+        if (instance instanceof PostRemovalAware removalAware) {
             removalAware.postRemove(this);
             return true;
         }
@@ -291,31 +100,22 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     @Override
     public void afterContextIntIds() {
         try (var ignored = getProfiler().enter("BaseEntityContext.afterContextIntIds", true)) {
-            forEachEntityInstancePair((object, instance) -> {
-                if (isNewEntity(object) && (object instanceof Entity entity) && instance.setAfterContextInitIdsNotified()) {
-                    if (entity.afterContextInitIds())
-                        updateInstance(object, getInstance(object));
-                }
+            instanceContext.forEach(instance -> {
+                if (instance instanceof Entity entity && instance.isNew() && instance.setAfterContextInitIdsNotified())
+                    entity.afterContextInitIds();
             });
         }
     }
 
-    public <T> T bind(T entity) {
+    public <T extends Instance> T bind(T entity) {
 //        if(model instanceof Entity entity && entity.isEphemeralEntity())
 //            throw new IllegalArgumentException("Can not bind an ephemeral entity");
-        NncUtils.requireTrue(EntityUtils.tryGetPhysicalId(entity) == null, "Can not bind a persisted entity");
-        if (this.containsEntity(entity))
+        Utils.require(EntityUtils.tryGetPhysicalId(entity) == null, "Can not bind a persisted entity");
+        if (this.containsInstance(entity))
             return entity;
-        newInstance(entity);
+        instanceContext.bind(entity);
+        instanceContext.updateMemoryIndex((ClassInstance) entity);
         return entity;
-    }
-
-    public void initIdManually(Object model, Id id) {
-        var instance = getInstance(model);
-        if (instance.tryGetTreeId() != null) {
-            throw new InternalException("Model " + model + " already its id initialized");
-        }
-        NncUtils.requireNonNull(instanceContext).initIdManually(instance, id);
     }
 
     public Flow getFlow(Id id) {
@@ -350,113 +150,16 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     @Override
-    public boolean containsEntity(Class<?> entityType, Id id) {
-        return entityMap.containsKey(id) || parent != null && parent.containsEntity(entityType, id);
-    }
-
-    @Override
     public <T> T getBufferedEntity(Class<T> entityClass, Id id) {
-        var found = entityMap.get(id);
-        if (found != null)
-            return entityClass.cast(found);
-        if (parent != null)
-            return parent.getBufferedEntity(entityClass, id);
-        else
-            return null;
+        return entityClass.cast(instanceContext.getBuffered(id));
     }
-
-//    public <T> T getEntity(Class<T> entityType, Id id) {
-//        return getEntity(entityType, instanceContext.get(id));
-//    }
-
-//    private void ensureNotRemoved(Object entity) {
-//        if (entity instanceof Entity e)
-//            e.ensureNotRemoved();
-//        else {
-//            if (removedEntities.contains(entity))
-//                throw new InternalException(String.format("'%s' is already removed", entity));
-//        }
-//    }
 
     @Override
     public <T> @Nullable T getEntity(Class<T> entityType, Id id) {
-        var existing = entityMap.get(id);
-        if(existing != null)
-            return entityType.cast(existing);
-        if(parent != null && parent.containsEntity(entityType, id))
-            return parent.getEntity(entityType, id);
-        if(id.isTemporary())
-            return null;
-        var typeTag = id.getTypeTag(this);
-        assert TypeTags.isSystemTypeTag(typeTag);
-        var mapper = getDefContext().tryGetMapper(typeTag);
-        if (mapper == null || mapper instanceof DirectDef<?>)
-            return entityType.cast(instanceContext.createReference(id));
-        var castedMapper = mapper.as(entityType);
-        if (castedMapper.isProxySupported()) {
-            var proxy = EntityProxyFactory.getProxy(
-                    castedMapper.getEntityClass(),
-                    id,
-                    k -> castedMapper.getEntityClass().cast(mapper.createModelProxyHelper(k)),
-                    // Instance load will trigger entity initialization, see onInstanceInitialized
-                    m -> instanceContext.get(id)
-            );
-            putEntity(id, proxy);
-            entities.add(proxy);
-            return proxy;
-        } else
-            return getEntity(entityType, instanceContext.get(id));
-//        if (id.tryGetTreeId() == null && !instanceContext.contains(id))
-//            return null;
-//        if(instanceContext.containsId(id)) {
-//            var instance = instanceContext.get(id);
-//            return getEntity(entityType, instance);
-//        }
-//        var resolvedMapper = getDefContext().tryGetMapper(id.getTypeTag(this, this));
-//        if (resolvedMapper == null || resolvedMapper instanceof DirectDef<?>)
-//            return entityType.cast(instanceContext.createReference(id));
-//        var mapper = resolvedMapper.as(entityType);
-//        if (!mapper.isProxySupported())
-//            return getEntity(entityType, instanceContext.get(id));
-//        return EntityProxyFactory.getProxy(
-//                mapper.getEntityClass(),
-//                id,
-//                k -> mapper.getEntityClass().cast(mapper.createModelProxyHelper(k)),
-//                m -> instanceContext.get(id)
-//        );
-//        if (id.isEmpty())
-//            return null;
-//        var id = id.toId();
-//        if (id.tryGetTreeId() == null && !instanceContext.contains(id))
-//            return null;
-//        var existing = entityMap.get(id);
-//        if (existing != null)
-//            return entityType.cast(existing);
-//        if (parent != null && parent.containsEntity(entityType, id))
-//            return parent.getEntity(entityType, id);
-//        var resolvedMapper = getDefContext().tryGetMapper(id.getTypeTag(this, this));
-//        if (resolvedMapper == null || resolvedMapper instanceof DirectDef<?>)
-//            return entityType.cast(instanceContext.createReference(id));
-//        var mapper = resolvedMapper.as(entityType);
-//        T entity;
-//        if (mapper.isProxySupported()) {
-//            final Mapper<?, ?> defFinal = mapper;
-//            entity = EntityProxyFactory.getProxy(
-//                    mapper.getEntityClass(),
-//                    id,
-//                    k -> mapper.getEntityClass().cast(defFinal.createModelProxyHelper(k)),
-//                    m -> initializeModel(m, instanceContext.get(id), defFinal)
-//            );
-//        } else {
-//            var instance = instanceContext.get(id);
-//            entity = mapper.getEntityClass().cast(mapper.createEntityHelper(instance, objectInstanceMap));
-//            instance.setMappedEntity(entity);
-//            model2instance.put(entity, instance);
-//            if (entity instanceof LoadAware loadAware)
-//                loadAware.onLoad();
-//        }
-//        entityMap.put(id, entity);
-//        return entity;
+        if (id.isTemporary())
+            return entityType.cast(instanceContext.getBuffered(id));
+        else
+            return entityType.cast(instanceContext.get(id));
     }
 
     public <T> T get(Class<T> klass, Id id) {
@@ -470,14 +173,14 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
 
     public void initIds() {
         try (var ignored = enter("initIds")) {
-            NncUtils.requireNonNull(instanceContext);
-            flushAndWriteInstances();
+            Objects.requireNonNull(instanceContext);
+            this.flush();
             instanceContext.initIds();
         }
     }
 
     public void finish() {
-        for (Object o : model2instance.keySet()) {
+        for (var o : instanceContext) {
             if (o instanceof ContextFinishWare c)
                 c.onContextFinish(this);
         }
@@ -488,11 +191,6 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     public void beforeFinish() {
         try (var ignored1 = getProfiler().enter("flush")) {
             flush();
-        }
-//        updateInstances();
-//            validateInstances();
-        try (var ignored1 = getProfiler().enter("writeInstances")) {
-            writeInstances(instanceContext);
         }
     }
 
@@ -508,74 +206,15 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
         return instanceContext != null && instanceContext.isFinished();
     }
 
-    protected Collection<Object> models() {
-        return Collections.unmodifiableCollection(entities);
-    }
-
-    public void flushAndWriteInstances() {
-        NncUtils.requireNonNull(instanceContext);
-        flush();
-        writeInstances(instanceContext);
-    }
-
-    protected void flush() {
-    }
-
-    protected void writeInstances(IInstanceContext instanceContext) {
-    }
-
     @Override
-    public void updateInstances() {
-        try (var profilerEntry = getProfiler().enter("updateInstances")) {
-            profilerEntry.addMessage("numInstances", model2instance.size());
-//            var list = new ArrayList<>(model2instance.entrySet());
-            forEachEntityInstancePair(this::updateInstance);
-//            for (var entry : list) {
-//                updateInstance(entry.getKey(), entry.getValue());
-//            }
-//            new IdentityHashMap<>(model2instance).forEach(this::updateInstance);
-        }
-    }
-
-    private void forEachEntityInstancePair(BiConsumer<Object, Instance> action) {
-        instanceContext.forEach(instance -> {
-            var entity = instance.getMappedEntity();
-            if (entity != null)
-                action.accept(entity, instance);
-        });
-    }
-
-    @Override
-    public void update(Object object) {
-        updateInstance(object, getInstance(object));
-    }
-
-    @Override
-    public void updateEntity(Object object) {
-        getInstance(object).forEachDescendant(i -> {
-            var e = i.getMappedEntity();
-            if (e != null) {
-                var mapper = getDefContext().getMapper(i.getType());
-                mapper.updateEntityHelper(e, i, getObjectInstanceMap());
-            }
-        });
-    }
-
-    private void updateInstance(Object object, Instance instance) {
-//        try(var ignored = getProfiler().enter("updateInstance")) {
-        if (isModelInitialized(object) && !instance.isRemoved() && !instance.isDirectlyModified()) {
-            var mapper = getDefContext().getMapper(instance.getType());
-            mapper.updateInstanceHelper(object, instance, getObjectInstanceMap());
-            updateMemIndex(object);
-        }
-//        }
+    public void flush() {
     }
 
     @Override
     public <T extends Entity> List<T> selectByKey(IndexDef<T> indexDef,
-                                                  Object... values) {
+                                                  Value... values) {
         try (var ignored = enter("selectByKey")) {
-            NncUtils.requireNonNull(instanceContext, "instanceContext required");
+            Objects.requireNonNull(instanceContext, "instanceContext required");
             IndexKeyRT indexKey = createIndexKey(indexDef, values);
             var instances = instanceContext.selectByKey(indexKey);
             return createEntityList(indexDef.getType(), instances);
@@ -584,41 +223,22 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
 
     @Nullable
     @Override
-    public <T extends Entity> T selectFirstByKey(IndexDef<T> indexDef, Object... values) {
-//        NncUtils.requireTrue(indexDef.isUnique());
-//        try (var ignored = enter("selectByUniqueKey")) {
-            if(indexDef.isUnique() && parent != null && parent.containsUniqueKey(indexDef, values)) {
-                return parent.selectFirstByKey(indexDef, values);
-            }
-            NncUtils.requireNonNull(instanceContext, "instanceContext required");
-            IndexKeyRT indexKey = createIndexKey(indexDef, values);
-            var instance = instanceContext.selectFirstByKey(indexKey);
-            return instance == null ? null : createEntityList(indexDef.getType(), List.of(instance)).get(0);
-//        }
+    public <T extends Entity> T selectFirstByKey(IndexDef<T> indexDef, Value... values) {
+        var instance = instanceContext.selectFirstByKey(createIndexKey(indexDef, values));
+        return instance == null ? null : createEntityList(indexDef.getType(), List.of(instance)).getFirst();
     }
 
     @Override
-    public boolean containsUniqueKey(IndexDef<?> indexDef, Object... values) {
-        for (Object value : values) {
-            if(!Instances.isPrimitive(value) && !containsEntity(value))
+    public boolean containsUniqueKey(IndexDef<?> indexDef, Value... values) {
+        for (var value : values) {
+            if(value instanceof Reference ref && !containsId(ref.getId()))
                 return false ;
         }
         return instanceContext.containsUniqueKey(createIndexKey(indexDef, values));
     }
 
     @Override
-    public long getAppId(Object model) {
-        if (entities.contains(model)) {
-            return getAppId();
-        } else if (parent != null) {
-            return parent.getAppId(model);
-        } else {
-            throw new InternalException("Model " + model + " is not contained in the context");
-        }
-    }
-
-    @Override
-    public <T> List<T> query(EntityIndexQuery<T> query) {
+    public <T extends Entity> List<T> query(EntityIndexQuery<T> query) {
         Class<T> javaClass = query.indexDef().getType();
         var instances = instanceContext.query(convertToInstanceIndexQuery(query));
         return createEntityList(javaClass, instances);
@@ -630,75 +250,26 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     private InstanceIndexQuery convertToInstanceIndexQuery(EntityIndexQuery<?> query) {
-        var index = getDefContext().getIndexConstraint(query.indexDef());
+        var index = query.indexDef().getIndex();
         return new InstanceIndexQuery(
                 index,
-                query.from() != null ? new InstanceIndexKey(index, NncUtils.map(query.from().values(), this::resolveInstance)) : null,
-                query.to() != null ? new InstanceIndexKey(index, NncUtils.map(query.to().values(), this::resolveInstance)) : null,
+                query.from() != null ? new InstanceIndexKey(index, query.from().values()) : null,
+                query.to() != null ? new InstanceIndexKey(index, query.to().values()) : null,
                 query.desc(),
                 query.limit()
         );
     }
 
-    @Override
-    public Value resolveInstance(Object value) {
-        if (value == null) {
-            return Instances.nullInstance();
-        }
-        if (this.containsEntity(value)) {
-            if (!EntityUtils.isModelInitialized(value))
-                return instanceContext.createReference(((Entity) value).getId());
-            else
-                return getInstance(value).getReference();
-        }
-        return Instances.serializePrimitive(value, getDefContext()::getType);
-    }
-
-    private <T> List<T> createEntityList(Class<T> javaType, List<? extends Reference> instances) {
-        return EntityProxyFactory.getProxy(
-                new TypeReference<ReadonlyArray<T>>() {
-                },
-                null,
-                table -> table.initialize(
-                        ParameterizedTypeImpl.create(table.getRawClass(), Object.class),
-                        NncUtils.map(
-                                instances,
-                                inst -> inst.tryGetId() != null ?
-                                        getEntity(javaType, inst.getId()) : getEntity(javaType, inst.resolve())
-                        )
-                ),
-                k -> ReadonlyArray.createProxy(k, javaType)
-        ).toList();
+    private <T> List<T> createEntityList(Class<T> javaType, List<? extends Reference> references) {
+        var list = new ArrayList<T>();
+        references.forEach(ref -> list.add(javaType.cast(ref.get())));
+        return list;
     }
 
     @Override
     public long getAppId() {
-        NncUtils.requireNonNull(instanceContext);
+        Objects.requireNonNull(instanceContext);
         return instanceContext.getAppId();
-    }
-
-    public boolean remove(Object entity) {
-        batchRemove(List.of(entity));
-        return true;
-    }
-
-    public void batchRemove(List<?> entities) {
-        entities.forEach(EntityUtils::ensureTreeInitialized);
-        if (parent != null) {
-            List<?> parentEntities = NncUtils.filter(entities, parent::containsEntity);
-            if (!parentEntities.isEmpty()) {
-                parent.batchRemove(parentEntities);
-                entities = NncUtils.exclude(entities, parent::containsEntity);
-            }
-        }
-        var instances = NncUtils.map(entities, this::getInstance);
-//        updateInstances();
-        if (NncUtils.isEmpty(instances))
-            return;
-        if (instanceContext != null)
-            instanceContext.batchRemove(instances);
-        else
-            instances.forEach(this::onInstanceRemoved);
     }
 
     private Set<Instance> beforeRemove(List<?> entities) {
@@ -710,34 +281,19 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     private void beforeRemove0(Object object, Set<Instance> instancesToRemove) {
-        if (object instanceof Instance instance) {
+        if (object instanceof MvInstance instance) {
             instancesToRemove.add(instance);
             return;
         }
-        var instance = model2instance.get(object);
+        var instance = (Instance) object;
         if (instance == null || instancesToRemove.contains(instance))
             return;
         EntityUtils.ensureProxyInitialized(object);
         instancesToRemove.add(instance);
         var cascades = new IdentitySet<>(getNonEphemeralChildren(object));
-        if (object instanceof Entity entity && entity.getParentEntity() != null) {
-            var parentInst = getInstance(entity.getParentEntity());
-            if (!instancesToRemove.contains(parentInst)) {
-                if (entity.getParentEntity() instanceof ChildArray<?> array)
-                    array.remove(entity);
-                else {
-                    ReflectionUtils.set(
-                            entity.getParentEntity(),
-                            requireNonNull(entity.getParentEntityField()),
-                            null
-                    );
-                }
-                updateInstance(entity.getParentEntity(), parentInst);
-            }
-        }
         if (object instanceof RemovalAware removalAware)
             cascades.addAll(removalAware.beforeRemove(this));
-        if (NncUtils.isNotEmpty(cascades)) {
+        if (Utils.isNotEmpty(cascades)) {
             for (Object cascade : cascades) {
                 beforeRemove0(cascade, instancesToRemove);
             }
@@ -745,22 +301,13 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     private Set<Object> getNonEphemeralChildren(Object object) {
-        Set<Object> children = new IdentitySet<>();
-        Type type = getDefContext().getType(getRuntimeType(object));
-        if (object instanceof ReadonlyArray<?> array) {
-            if (array instanceof ChildArray<?>)
-                children.addAll(NncUtils.filter(array, Objects::nonNull));
-        } else if (type instanceof KlassType classType) {
-            var klass = classType.getKlass();
-            for (Field field : klass.getAllFields()) {
-                if (field.isChild()) {
-                    Object child = ReflectionUtils.get(object, getDefContext().getJavaField(field));
-                    if (child != null && !EntityUtils.isEphemeral(child))
-                        children.add(child);
-                }
-            }
+        if (object instanceof Entity entity) {
+            Set<Object> children = new IdentitySet<>();
+            entity.forEachChild(children::add);
+            return children;
         }
-        return children;
+        else
+            return Set.of();
     }
 
     public IInstanceContext getInstanceContext() {
@@ -768,153 +315,22 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     }
 
     @SuppressWarnings("unused")
-    public <T extends Entity> T getByUniqueKey(Class<T> entityType, IndexDef<?> uniqueConstraintDef, Object... fieldValues) {
-        NncUtils.requireNonNull(instanceContext);
+    public <T extends Entity> T getByUniqueKey(Class<T> entityType, IndexDef<?> uniqueConstraintDef, Value... fieldValues) {
+        Objects.requireNonNull(instanceContext);
         IndexKeyRT indexKey = createIndexKey(uniqueConstraintDef, fieldValues);
         var instance = instanceContext.selectFirstByKey(indexKey);
-        return NncUtils.get(instance, i -> getEntity(entityType, requireNonNull(i.tryGetId())));
+        return Utils.safeCall(instance, i -> getEntity(entityType, requireNonNull(i.tryGetId())));
     }
 
-    private IndexKeyRT createIndexKey(IndexDef<?> uniqueConstraintDef, Object... values) {
-        var constraint = getDefContext().getIndexConstraint(uniqueConstraintDef);
-        NncUtils.requireNonNull(constraint);
-        return constraint.createIndexKeyByModels(Arrays.asList(values), this);
-    }
-
-    @Override
-    public Instance getInstance(Object entity) {
-        EntityUtils.ensureProxyInitialized(entity);
-        if (parent != null && parent.containsEntity(entity)) {
-            return parent.getInstance(entity);
-        }
-        var instance = model2instance.get(entity);
-        if (instance == null) {
-            instance = newInstance(entity);
-        }
-        return instance;
-//        return Objects.requireNonNull(model2instance.get(entity), () -> "Failed to get instance for entity " + entity + "@" + System.identityHashCode(entity));
-    }
-
-    public ClassInstance getEntityInstance(Entity entity) {
-        return (ClassInstance) getInstance(entity);
-    }
-
-    /**
-     * Bind a new entity to the context with the mapped instance
-     */
-    protected final void addBinding(Object model, Instance instance) {
-        addMapping(model, instance);
-        if (model instanceof BindAware bindAware)
-            bindAware.onBind(this);
-    }
-
-    private Instance newInstance(Object object) {
-        Mapper<?, ?> mapper = getDefContext().getMapperByEntity(object);
-//        if (mapper.isProxySupported()) {
-//            var instance = mapper.allocateInstanceHelper(object, objectInstanceMap, EntityUtils.tryGetId(object));
-//            addBinding(object, instance);
-//            mapper.initInstanceHelper(instance, object, objectInstanceMap);
-//            updateMemIndex(object);
-//            return instance;
-//        } else {
-            var instance = mapper.createInstanceHelper(object, getObjectInstanceMap(), null);
-//            addBinding(object, instance);
-            updateMemIndex(object);
-            return instance;
-//        }
-    }
-
-    public Collection<Instance> instances() {
-        return model2instance.values();
-    }
-
-    /*
-    Add a mapping between an entity and an instance. Client shouldn't call this method directly if the
-    entity is new, use addBinding instead.
-     */
-    protected void addMapping(Object model, Instance instance) {
-        if (instance.getMappedEntity() != null)
-            throw new IllegalStateException("Entity " + EntityUtils.getEntityDesc(model) + " is already mapped");
-        model2instance.put(model, instance);
-        instance.setMappedEntity(model);
-        entities.add(model);
-        if (model instanceof Entity entity) {
-            var id = entity.tryGetId();
-            if(id != null) {
-                if (id instanceof TmpId)
-                    instance.initId(id);
-                putEntity(id, entity);
-            }
-        } else if(instance.tryGetId() instanceof PhysicalId id)
-            putEntity(id, model);
-        if (!manualInstanceWriting()) {
-            if (!instanceContext.containsInstance(instance))
-                instanceContext.bind(instance);
-        }
-    }
-
-    private void putEntity(Id id, Object entity) {
-        entityMap.put(id, entity);
-    }
-
-    protected void updateMemIndex(Object object) {
-//        try(var ignored = getProfiler().enter("updateMemIndex")) {
-        var instance = getInstance(object);
-        if (!manualInstanceWriting() && instanceContext != null && instance instanceof ClassInstance clsInst) {
-            instanceContext.updateMemoryIndex(clsInst);
-        }
-//        }
-    }
-
-    @Override
-    public ObjectInstanceMap getObjectInstanceMap() {
-        return objectInstanceMap;
-    }
-
-    protected boolean manualInstanceWriting() {
-        return false;
+    private IndexKeyRT createIndexKey(IndexDef<?> uniqueConstraintDef, Value... values) {
+        var constraint = uniqueConstraintDef.getIndex();
+        Objects.requireNonNull(constraint);
+        return constraint.createIndexKey(List.of(values));
     }
 
     @Override
     public Type getType(Class<?> javaType) {
         return getDefContext().getType(javaType);
-    }
-
-    @Override
-    public List<Object> scan(long start, long limit) {
-        return NncUtils.map(
-                instanceContext.scan(start, limit).instances(),
-                inst -> getEntity(Object.class, inst.getId())
-        );
-    }
-
-    public void setInstanceContext(IInstanceContext instanceContext) {
-        this.instanceContext = instanceContext;
-    }
-
-    @Override
-    public void setFlag(ContextFlag flag) {
-        flags.add(flag);
-    }
-
-    @Override
-    public boolean isFlagSet(ContextFlag flag) {
-        return flags.contains(flag);
-    }
-
-    @Override
-    public void clearFlag(ContextFlag flag) {
-        flags.remove(flag);
-    }
-
-    @Override
-    public boolean isEntityCreationDisabled() {
-        return entityCreationDisabled;
-    }
-
-    @Override
-    public void setEntityCreationDisabled(boolean entityCreationDisabled) {
-        this.entityCreationDisabled = entityCreationDisabled;
     }
 
     @Override
@@ -925,5 +341,319 @@ public abstract class BaseEntityContext implements CompositeTypeFactory, IEntity
     @Override
     public void setParameterizedMap(ParameterizedMap parameterizedMap) {
         this.parameterizedMap = parameterizedMap;
+    }
+
+
+    @Override
+    public void setLockMode(LockMode mode) {
+        instanceContext.setLockMode(mode);
+    }
+
+    @Override
+    public LockMode getLockMode() {
+        return instanceContext.getLockMode();
+    }
+
+    @Override
+    public List<Id> filterAlive(List<Id> ids) {
+        return instanceContext.filterAlive(ids);
+    }
+
+    @Override
+    public boolean isAlive(Id id) {
+        return instanceContext.isAlive(id);
+    }
+
+    @Override
+    public Instance get(Id id) {
+        return instanceContext.get(id);
+    }
+
+    @Override
+    public Reference createReference(Id id) {
+        return instanceContext.createReference(id);
+    }
+
+    @Override
+    public List<Instance> batchGetRoots(List<Long> treeIds) {
+        return instanceContext.batchGetRoots(treeIds);
+    }
+
+    @Override
+    public Instance getRoot(long treeId) {
+        return instanceContext.getRoot(treeId);
+    }
+
+    @Nullable
+    @Override
+    public Instance getBuffered(Id id) {
+        return instanceContext.getBuffered(id);
+    }
+
+    @Override
+    public String getClientId() {
+        return instanceContext.getClientId();
+    }
+
+    @Override
+    public Instance internalGet(Id id) {
+        return instanceContext.internalGet(id);
+    }
+
+    @Override
+    public boolean contains(Id id) {
+        return instanceContext.contains(id);
+    }
+
+    @Override
+    public Profiler getProfiler() {
+        return instanceContext.getProfiler();
+    }
+
+    @Override
+    public List<Instance> batchGet(Collection<Id> ids) {
+        return instanceContext.batchGet(ids);
+    }
+
+    @Override
+    public ScanResult scan(long start, long limit) {
+        return instanceContext.scan(start, limit);
+    }
+
+    @Override
+    public InstanceRepository instanceRepository() {
+        return instanceContext.instanceRepository();
+    }
+
+    @Override
+    public void loadTree(long id) {
+        instanceContext.loadTree(id);
+    }
+
+    @Override
+    public boolean isReferenced(Instance instance) {
+        return instanceContext.isReferenced(instance);
+    }
+
+    @Override
+    public TypeDefProvider getTypeDefProvider() {
+        return instanceContext.getTypeDefProvider();
+    }
+
+    @Override
+    public RedirectStatusProvider getRedirectStatusProvider() {
+        return instanceContext.getRedirectStatusProvider();
+    }
+
+    @Override
+    public boolean containsInstance(Instance instance) {
+        return instanceContext.containsInstance(instance);
+    }
+
+    @Override
+    public boolean containsId(Id id) {
+        return instanceContext.containsId(id);
+    }
+
+    @Override
+    public List<Instance> getByReferenceTargetId(Id targetId, long startExclusive, long limit) {
+        return instanceContext.getByReferenceTargetId(targetId, startExclusive, limit);
+    }
+
+    @Override
+    public List<Instance> getRelocated() {
+        return instanceContext.getRelocated();
+    }
+
+    @Override
+    public void buffer(Id id) {
+        instanceContext.buffer(id);
+    }
+
+    @Override
+    public void removeForwardingPointer(MvInstance instance, boolean clearingOldId) {
+        instanceContext.removeForwardingPointer(instance, clearingOldId);
+    }
+
+    @Override
+    public void buffer(Collection<? extends Id> ids) {
+        instanceContext.buffer(ids);
+    }
+
+    @Override
+    public boolean containsIdSelf(Id id) {
+        return instanceContext.containsIdSelf(id);
+    }
+
+    @Override
+    public void batchRemove(Collection<Instance> instances) {
+        instanceContext.batchRemove(instances);
+    }
+
+    @Override
+    public boolean remove(Instance instance) {
+        return instanceContext.remove(instance);
+    }
+
+    @Override
+    public IInstanceContext createSame(long appId, TypeDefProvider typeDefProvider) {
+        return instanceContext.createSame(appId, typeDefProvider);
+    }
+
+    @Override
+    public List<Reference> selectByKey(IndexKeyRT indexKey) {
+        return instanceContext.selectByKey(indexKey);
+    }
+
+    @Override
+    public List<Reference> query(InstanceIndexQuery query) {
+        return instanceContext.query(query);
+    }
+
+    @Override
+    public long count(InstanceIndexQuery query) {
+        return instanceContext.count(query);
+    }
+
+    @Override
+    public boolean containsUniqueKey(IndexKeyRT key) {
+        return instanceContext.containsUniqueKey(key);
+    }
+
+    @Override
+    public Reference selectFirstByKey(IndexKeyRT key) {
+        return instanceContext.selectFirstByKey(key);
+    }
+
+    @Override
+    public void batchBind(Collection<Instance> instances) {
+        instanceContext.batchBind(instances);
+    }
+
+    @Override
+    public void registerCommitCallback(Runnable action) {
+        instanceContext.registerCommitCallback(action);
+    }
+
+    @Override
+    public <E> E getAttribute(ContextAttributeKey<E> key) {
+        return instanceContext.getAttribute(key);
+    }
+
+    @Override
+    public void initIdManually(Instance instance, Id id) {
+        instanceContext.initIdManually(instance, id);
+    }
+
+    @Override
+    public void increaseVersionsForAll() {
+        instanceContext.increaseVersionsForAll();
+    }
+
+    @Override
+    public void updateMemoryIndex(ClassInstance instance) {
+        instanceContext.updateMemoryIndex(instance);
+    }
+
+    @Nullable
+    @Override
+    public Consumer<Object> getBindHook() {
+        return instanceContext.getBindHook();
+    }
+
+    @Override
+    public Instance getRemoved(Id id) {
+        return instanceContext.getRemoved(id);
+    }
+
+    @Override
+    @Nullable
+    public EventQueue getEventQueue() {
+        return instanceContext.getEventQueue();
+    }
+
+    @Override
+    public InstanceInput createInstanceInput(InputStream stream) {
+        return instanceContext.createInstanceInput(stream);
+    }
+
+    @Override
+    public long getTimeout() {
+        return instanceContext.getTimeout();
+    }
+
+    @Override
+    public void setTimeout(long timeout) {
+        instanceContext.setTimeout(timeout);
+    }
+
+    @Override
+    public String getDescription() {
+        return instanceContext.getDescription();
+    }
+
+    @Override
+    public void setDescription(String description) {
+        instanceContext.setDescription(description);
+    }
+
+    @Override
+    public void forceReindex(ClassInstance instance) {
+        instanceContext.forceReindex(instance);
+    }
+
+    @Override
+    public Set<ClassInstance> getReindexSet() {
+        return instanceContext.getReindexSet();
+    }
+
+    @Override
+    public void forceSearchReindex(ClassInstance instance) {
+        instanceContext.forceSearchReindex(instance);
+    }
+
+    @Override
+    public Set<ClassInstance> getSearchReindexSet() {
+        return instanceContext.getSearchReindexSet();
+    }
+
+    @Override
+    public void addListener(ContextListener listener) {
+        instanceContext.addListener(listener);
+    }
+
+    @Override
+    public List<Reference> indexScan(IndexKeyRT from, IndexKeyRT to) {
+        return instanceContext.indexScan(from, to);
+    }
+
+    @Override
+    public long indexCount(IndexKeyRT from, IndexKeyRT to) {
+        return instanceContext.indexCount(from, to);
+    }
+
+    @Override
+    public List<Reference> indexSelect(IndexKeyRT key) {
+        return instanceContext.indexSelect(key);
+    }
+
+    @Override
+    public @NotNull Iterator<Instance> iterator() {
+        return instanceContext.iterator();
+    }
+
+    @Override
+    public void forEach(Consumer<? super Instance> action) {
+        instanceContext.forEach(action);
+    }
+
+    @Override
+    public Spliterator<Instance> spliterator() {
+        return instanceContext.spliterator();
+    }
+
+    @Override
+    public long getAppId(Instance instance) {
+        return instanceContext.getAppId(instance);
     }
 }
