@@ -1,60 +1,98 @@
 package org.metavm.flow;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import org.jetbrains.annotations.NotNull;
+import org.metavm.annotation.NativeEntity;
 import org.metavm.api.ChildEntity;
 import org.metavm.api.Entity;
-import org.metavm.entity.ChildArray;
-import org.metavm.entity.Element;
+import org.metavm.api.Generated;
+import org.metavm.entity.*;
 import org.metavm.entity.ElementVisitor;
-import org.metavm.entity.LoadAware;
-import org.metavm.object.instance.core.Id;
-import org.metavm.util.EncodingUtils;
+import org.metavm.entity.EntityRegistry;
+import org.metavm.object.instance.core.Instance;
+import org.metavm.object.instance.core.Reference;
+import org.metavm.object.type.ClassType;
+import org.metavm.object.type.Klass;
+import org.metavm.util.MvInput;
 import org.metavm.util.MvOutput;
+import org.metavm.util.StreamVisitor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.annotation.Nullable;
-import java.util.List;
+import java.util.*;
+import java.util.Map;
+import java.util.function.Consumer;
 
+@NativeEntity(61)
 @Entity
-public class Code extends Element implements LoadAware {
+public class Code extends org.metavm.entity.Entity implements Element, LocalKey {
 
     public static final Logger debugLogger = LoggerFactory.getLogger("Debug");
+    @SuppressWarnings("unused")
+    private static Klass __klass__;
 
-    private final Callable callable;
+    private Callable callable;
     @ChildEntity
-    private ChildArray<Node> nodes = addChild(new ChildArray<>(Node.class), "nodes");
+    private transient LinkedList<Node> nodes = new LinkedList<>();
     private int maxLocals;
     private int maxStack;
-    private String codeBase64 = EncodingUtils.encodeBase64(new byte[0]);
-    private transient byte[] code;
+    private byte[] code;
 
     public Code(Callable callable) {
-        super(null, null);
+        super();
         this.callable = callable;
-        nodes.setEphemeralEntity(true);
+    }
+
+    @Generated
+    public static void visitBody(StreamVisitor visitor) {
+        visitor.visitInt();
+        visitor.visitInt();
+        visitor.visitBytes();
     }
 
     public void addNode(Node node) {
         onNodeChange();
         var prev = node.getPredecessor() != null ? node.getPredecessor() : null;
         if (prev != null) {
-            nodes.addChildAfter(node, prev);
+            addNodeAfter(node, prev);
         } else {
             var nodes = this.nodes;
             if (!nodes.isEmpty())
-                nodes.get(0).insertBefore(node);
-            nodes.addFirstChild(node);
+                nodes.getFirst().insertBefore(node);
+            nodes.addFirst(node);
         }
         if(node instanceof VariableAccessNode varAccNode)
             maxLocals = Math.max(maxLocals, varAccNode.getIndex() + 1);
         getFlow().addNode(node);
     }
 
+    public void addNodeAfter(Node node, Node anchor) {
+        var it = nodes.listIterator();
+        while (it.hasNext()) {
+            if (it.next().equals(anchor)) {
+                it.add(node);
+                return;
+            }
+        }
+        throw new IllegalStateException("Anchor " + anchor + " not in the list");
+    }
+
+    public void addNodeBefore(Node node, Node anchor) {
+        var it = nodes.listIterator();
+        while (it.hasNext()) {
+            if (it.next().equals(anchor)) {
+                it.previous();
+                it.add(node);
+                return;
+            }
+        }
+        throw new IllegalStateException("Anchor " + anchor + " not in the list");
+    }
+
     public void clear() {
         onNodeChange();
         this.nodes.clear();
-        codeBase64 = EncodingUtils.encodeBase64(new byte[0]);
         code = null;
         maxLocals = 0;
         maxStack = 0;
@@ -62,35 +100,12 @@ public class Code extends Element implements LoadAware {
 
     public void setNodes(List<Node> nodes) {
         onNodeChange();
-        this.nodes.resetChildren(nodes);
-    }
-
-    public Node getNode(long id) {
-        return nodes.get(org.metavm.entity.Entity::tryGetId, id);
-    }
-
-    public Node getNode(Id id) {
-        return nodes.get(org.metavm.entity.Entity::tryGetId, id);
+        this.nodes.clear();
+        this.nodes.addAll(nodes);
     }
 
     public List<Node> getNodes() {
-        return nodes.toList();
-    }
-
-    public Node getNodeById(long id) {
-        return nodes.get(org.metavm.entity.Entity::tryGetId, id);
-    }
-
-    public Node getNodeByName(String name) {
-        return nodes.get(Node::getName, name);
-    }
-
-    public Node getNodeByIndex(int index) {
-        return nodes.get(index);
-    }
-
-    public Node tryGetFirstNode() {
-        return nodes.isEmpty() ? null : nodes.get(0);
+        return Collections.unmodifiableList(nodes);
     }
 
     public void removeNode(Node node) {
@@ -118,15 +133,10 @@ public class Code extends Element implements LoadAware {
 
     @Nullable
     public Node getLastNode() {
-        return nodes.isEmpty() ? null : nodes.get(nodes.size() - 1);
+        return nodes.isEmpty() ? null : nodes.getLast();
     }
 
     private void onNodeChange() {
-    }
-
-    @Override
-    public <R> R accept(ElementVisitor<R> visitor) {
-        return visitor.visitScope(this);
     }
 
     public void writeCode(CodeWriter writer) {
@@ -176,23 +186,11 @@ public class Code extends Element implements LoadAware {
         var output = new CodeOutput(getFlow().getConstantPool());
         nodes.forEach(node -> node.writeCode(output));
         code = output.toByteArray();
-        codeBase64 = EncodingUtils.encodeBase64(code);
     }
 
-    @Override
-    public void onLoadPrepare() {
-        nodes = addChild(new ChildArray<>(Node.class), "nodes");
-        nodes.setEphemeralEntity(true);
-        code = EncodingUtils.decodeBase64(codeBase64);
-    }
-
-    @Override
-    public void onLoad() {
-    }
-
-    public void setCodeBase64(String codebase64) {
-        this.codeBase64 = codebase64;
-        this.code = EncodingUtils.decodeBase64(codebase64);
+    public void rebuildNodes() {
+        assert nodes.isEmpty();
+        new CodeInput(this).readNodes();
     }
 
     public byte[] getCode() {
@@ -207,19 +205,102 @@ public class Code extends Element implements LoadAware {
         this.code = code;
     }
 
-    public void write(MvOutput output) {
+    @Override
+    public String getTitle() {
+        return "<code>";
+    }
+
+    @Nullable
+    @Override
+    public org.metavm.entity.Entity getParentEntity() {
+        return (org.metavm.entity.Entity) callable;
+    }
+
+    @Override
+    public boolean isValidLocalKey() {
+        return true;
+    }
+
+    @Override
+    public String getLocalKey(@NotNull BuildKeyContext context) {
+        return "code";
+    }
+
+    @Override
+    public <R> R accept(ElementVisitor<R> visitor) {
+        return visitor.visitCode(this);
+    }
+
+    @Override
+    public void acceptChildren(ElementVisitor<?> visitor) {
+        if (nodes != null) nodes.forEach(arg -> arg.accept(visitor));
+    }
+
+    private void onRead() {
+        nodes = new LinkedList<>();
+    }
+
+    @Override
+    public void forEachReference(Consumer<Reference> action) {
+    }
+
+    @Override
+    public void buildJson(Map<String, Object> map) {
+        map.put("nodes", this.getNodes());
+        map.put("callable", this.getCallable());
+        map.put("flow", this.getFlow().getStringId());
+        map.put("empty", this.isEmpty());
+        map.put("notEmpty", this.isNotEmpty());
+        var lastNode = this.getLastNode();
+        if (lastNode != null) map.put("lastNode", lastNode.getStringId());
+        map.put("maxLocals", this.getMaxLocals());
+        map.put("frameSize", this.getFrameSize());
+        map.put("maxStack", this.getMaxStack());
+        map.put("code", org.metavm.util.EncodingUtils.encodeBase64(this.getCode()));
+    }
+
+    @Override
+    public Klass getInstanceKlass() {
+        return __klass__;
+    }
+
+    @Override
+    public ClassType getInstanceType() {
+        return __klass__.getType();
+    }
+
+    @Override
+    public void forEachChild(Consumer<? super Instance> action) {
+    }
+
+    @Override
+    public int getEntityTag() {
+        return EntityRegistry.TAG_Code;
+    }
+
+    @Generated
+    @Override
+    public void readBody(MvInput input, org.metavm.entity.Entity parent) {
+        this.callable = (Callable) parent;
+        this.maxLocals = input.readInt();
+        this.maxStack = input.readInt();
+        this.code = input.readBytes();
+        this.onRead();
+    }
+
+    @Generated
+    @Override
+    public void writeBody(MvOutput output) {
         output.writeInt(maxLocals);
         output.writeInt(maxStack);
-        output.writeInt(code.length);
-        output.write(code);
+        output.writeBytes(code);
     }
 
-    public void read(KlassInput input) {
-        maxLocals = input.readInt();
-        maxStack = input.readInt();
-        code = new byte[input.readInt()];
-        int n = input.read(code);
-        codeBase64 = EncodingUtils.encodeBase64(code);
+    @Override
+    protected void buildSource(Map<String, org.metavm.object.instance.core.Value> source) {
     }
 
+    public void clearNodes() {
+        nodes.clear();
+    }
 }
