@@ -1,15 +1,15 @@
 package org.metavm.object.type;
 
-import org.metavm.util.NncUtils;
+import org.metavm.util.Utils;
 
 import java.util.List;
 
 public class ConstraintFactory {
 
     public static Index newUniqueConstraint(String name, List<Field> fields) {
-        NncUtils.requireNotEmpty(fields, "fields can not empty");
-        Klass type = fields.get(0).getDeclaringType();
-        String message = "Duplicate field '" + NncUtils.join(fields, Field::getQualifiedName) + "'";
+        Utils.requireNotEmpty(fields, "fields can not empty");
+        Klass type = fields.getFirst().getDeclaringType();
+        String message = "Duplicate field '" + Utils.join(fields, Field::getQualifiedName) + "'";
         return new Index(type, name, message, true, fields, null);
     }
 
