@@ -5,16 +5,16 @@ import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.sort.SortOrder;
 import org.metavm.constant.FieldNames;
 import org.metavm.expression.*;
+import org.metavm.object.instance.core.NumberValue;
 import org.metavm.object.instance.core.StringValue;
 import org.metavm.object.instance.core.Value;
 import org.metavm.object.type.Field;
 import org.metavm.object.type.Klass;
 import org.metavm.util.Column;
 import org.metavm.util.InternalException;
-import org.metavm.util.NncUtils;
+import org.metavm.util.Utils;
 
 import javax.annotation.Nullable;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 
@@ -38,99 +38,76 @@ public class SearchBuilder {
                 "(" + APPLICATION_ID + ":" + appIdStr + ")";
         if (!query.types().isEmpty()) {
             String typeCond = "(" +
-                    NncUtils.join(query.types(), t -> TYPE + ":\"" + t + "\"", " OR ") + ")";
+                    Utils.join(query.types(), t -> TYPE + ":\"" + t + "\"", " OR ") + ")";
             queryString += " AND " + typeCond;
         }
-        if (query.condition() != null && !Expressions.isConstantTrue(query.condition())) {
-            queryString += " AND " + parse(ExpressionSimplifier.simplify(query.condition()));
+        if (query.condition() != null) {
+            queryString += " AND " + query.condition().build();
         }
         return queryString;
     }
 
-    private static String parse(Expression expression) {
+    public static SearchCondition buildSearchCondition(Expression expression) {
+        return parse(ExpressionSimplifier.simplify(expression));
+    }
+
+    private static SearchCondition parse(Expression expression) {
         if (expression instanceof BinaryExpression binaryExpression) {
             return parseBinary(binaryExpression);
-        }
-        if (expression instanceof UnaryExpression unaryExpression) {
-            return parseUnary(unaryExpression);
         }
         if (expression instanceof FunctionExpression functionExpression) {
             return parseFunction(functionExpression);
         }
-        if (expression instanceof ConstantExpression constantExpression) {
-            return parseConstant(constantExpression);
-        }
         throw new RuntimeException("Unsupported expression: " + expression.getClass().getName());
     }
 
-    private static String parseConstant(ConstantExpression expression) {
-        return toString(expression.getValue().toSearchConditionValue());
-    }
-
-    private static String parseFunction(FunctionExpression expression) {
+    private static SearchCondition parseFunction(FunctionExpression expression) {
         var func = expression.getFunction();
         if (func == Func.STARTS_WITH || func == Func.CONTAINS) {
-            Expression fieldExpr = expression.getArguments().get(0);
+            Expression fieldExpr = expression.getArguments().getFirst();
             ConstantExpression constExpr = (ConstantExpression) expression.getArguments().get(1);
             Value constValue = constExpr.getValue();
             SearchField searchField = getColumn(fieldExpr);
-            String columnName = func == Func.CONTAINS ? searchField.fuzzyName() : searchField.name();
-            String value = func == Func.STARTS_WITH ?
-                    escape(((StringValue) constValue).getValue()) + "*" :
-                    toString(constValue.toSearchConditionValue());
-            return parenthesize(columnName + ":" + value);
+            if (func == Func.STARTS_WITH)
+                return new StartsWithSearchCondition(searchField.name(), (StringValue) constValue);
+            else
+                return new MatchSearchCondition(searchField.fuzzyName(), constValue);
         } else {
             throw new InternalException("Unsupported function " + func);
         }
     }
 
-    private static String parseBinary(BinaryExpression expression) {
-        BinaryOperator operator = expression.getOperator();
-
-        if (operator == BinaryOperator.EQ
-                || operator == BinaryOperator.GT || operator == BinaryOperator.GE
-                || operator == BinaryOperator.LT || operator == BinaryOperator.LE
-        ) {
-            Expression fieldExpr = expression.getVariableChild();
-            ConstantExpression constExpr = expression.getConstChild();
-            Value constValue = constExpr.getValue();
-            SearchField searchField = getColumn(fieldExpr);
-            String columnName = searchField.name();
-            String value = toString(constValue.toSearchConditionValue());
-            return parenthesize(columnName + getEsOperator(operator) + value);
-        }
-        if (operator == BinaryOperator.IN) {
-            Expression fieldExpr = expression.getVariableChild();
-            Iterable<Expression> expressions;
-            if (expression.getRight() instanceof ArrayExpression) {
-                expressions = expression.getArrayChild().getExpressions();
-            } else {
-                expressions = List.of(expression.getConstChild());
-            }
-            List<Object> values = new ArrayList<>();
-            for (Expression expr : expressions) {
-                if (expr instanceof ConstantExpression constExpr) {
-                    values.add(parseConstant(constExpr));
-                } else {
-                    throw new InternalException("Expression '" + expr + "' is not supported for 'in' operator. " +
-                            "Only constant values are supported. ");
-                }
-            }
-            return parenthesize(
-                    NncUtils.join(
-                            values, v -> getColumn(fieldExpr).name() + ":" + toString(v), " OR "
+    private static SearchCondition parseBinary(BinaryExpression expression) {
+        var operator = expression.getOperator();
+        if (operator == BinaryOperator.AND) {
+            return new AndSearchCondition(
+                    List.of(
+                            parse(expression.getLeft()),
+                            parse(expression.getRight())
+                    )
+            );
+        } else if (operator == BinaryOperator.OR) {
+            return new OrSearchCondition(
+                    List.of(
+                            parse(expression.getLeft()),
+                            parse(expression.getRight())
                     )
             );
         }
-        String first = parse(expression.getLeft()),
-                second = parse(expression.getRight());
-        if (operator == BinaryOperator.AND) {
-            return parenthesize(first + " AND " + second);
-        }
-        if (operator == BinaryOperator.OR) {
-            return parenthesize(first + " OR " + second);
-        }
-        throw new RuntimeException("Unsupported operator: " + operator);
+        var fieldExpr = expression.getVariableComponent();
+        var constExpr = expression.getConstantComponent();
+        var constValue = constExpr.getValue();
+        var searchField = getColumn(fieldExpr);
+        var esField = searchField.name();
+        return switch (expression.getOperator()) {
+            case EQ -> new MatchSearchCondition(esField, constValue);
+            case LT -> new LtSearchCondition(esField, (NumberValue) constValue);
+            case GT -> new GtSearchCondition(esField, (NumberValue) constValue);
+            case LE -> new LeSearchCondition(esField, (NumberValue) constValue);
+            case GE -> new GeSearchCondition(esField, (NumberValue) constValue);
+            case IN -> new InSearchCondition(esField, constValue.resolveArray().getElements());
+            default -> throw new IllegalStateException("Unsupported operator for search: " + operator.name());
+        };
     }
 
     private static SearchField getColumn(Expression expression) {
@@ -160,21 +137,6 @@ public class SearchBuilder {
         return ":";
     }
 
-    private static String parseUnary(UnaryExpression expression) {
-        var operator = expression.getOperator();
-        String operand = parse(expression.getOperand());
-        if (operator == UnaryOperator.NOT) {
-            return "!" + operand;
-        }
-        if (operator == UnaryOperator.IS_NULL) {
-            return "!" + parenthesize("_exists_:" + operand);
-        }
-        if (operator == UnaryOperator.IS_NOT_NULL) {
-            return "_exists_:" + operand;
-        }
-        throw new RuntimeException("Unsupported operator: " + operator);
-    }
-
     public static final Set<Character> SPECIAL_CHARS = Set.of(
             '+', '-', '=', '>', '<', '!', '(', ')', '{', '}',
             '[', ']', '^', '\'', '~', '*', '?', ':', '\\', '/', ' '
@@ -184,7 +146,7 @@ public class SearchBuilder {
             '|', '&'
     );
 
-    private static String toString(Object value) {
+    public static String toString(Object value) {
         if (value instanceof String string) {
             return "\"" + escape(string) + "\"";
         }
