@@ -5,7 +5,7 @@ import java.util.List;
 public class AstLabFoo {
 
     public String test(List<String> list) {
-        return list.get(0);
+        return list.getFirst();
     }
 
 }
